src/objects/sked_Object_Field_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>sked_Default_Value__c</fullName>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked_Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked_Lookup_Object__c</fullName>
        <label>Lookup Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked_Lookup_Reference_Field__c</fullName>
        <label>Lookup Reference Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked_Lookup_Target_Field__c</fullName>
        <label>Lookup Target Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked_Mapping_Type__c</fullName>
        <defaultValue>&apos;Direct&apos;</defaultValue>
        <label>MappingType</label>
        <picklist>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Map</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lookup To Lookup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adhoc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sked_Object_Mapping__c</fullName>
        <label>Object Mapping</label>
        <referenceTo>sked_Object_Mapping__c</referenceTo>
        <relationshipLabel>Object Field Mapping</relationshipLabel>
        <relationshipName>sked_Object_Field_Mapping</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sked_Source_Field__c</fullName>
        <description>If the Source Field have multiple fields. These fields must in order and It&apos;s required to select delimiter</description>
        <label>Source Field</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sked_Sync_Method__c</fullName>
        <label>Sync Method</label>
        <picklist>
            <picklistValues>
                <fullName>One Way</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Two Way</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Always (One Way)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Always (Two Way)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sked_Target_Field__c</fullName>
        <label>Target Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Object Field Mapping</label>
    <nameField>
        <displayFormat>OFM-{0000}</displayFormat>
        <label>Object Field Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Object Field Mapping</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>